# saber-rs

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PQCkemKAT_1568.rsp.json  PQCkemKAT_2304.rsp.json  PQCkemKAT_3040.rsp.json  README.md
.github/workflows/: ci.yml
benches/: all.rs
examples/: simple.rs
src/: arithmetic.rs  consts.rs  gen.rs  impls.rs  ind_cca.rs  ind_cpa.rs  ind_cpa.rs.bak  kat.rs  kem.rs  lib.rs  matrix_arith.rs  pke.rs  ring_arith.rs  ser.rs  util.rs
src/arithmetic/: matrix_arith.rs  ring_arith.rs
tests/: convert_rsp_to_json.py  kat.rs
