[package]
name = "saber_kem"
authors = ["Michael Rosenberg <michael@mrosenberg.pub>"]
license = "MIT/Apache-2.0"
version = "0.1.0"
edition = "2021"
keywords = ["cryptography", "crypto", "post-quantum", "encapsulation", "kem"]
categories = ["cryptography", "no-std"]

[dependencies]
kem = "0.3.0-pre.0"
rand_core = "0.6.4"
sha3 = { version = "0.10.8", default-features = false }
subtle = { version = "2.5.0", default-features = false }
zeroize = { version = "1.8.1", default-features = false, features = ["derive"] }

[dev-dependencies]
rand = "0.8.5"
criterion = "0.3"
aes_ctr_drbg = "0.0.2"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
hex = "0.4.3"

[[bench]]
name = "all"
harness = false
